# prefixdevname

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  shell-ci.yml
dracut/71prefixdevname/: module-setup.sh
dracut/71prefixdevname-tools/: module-setup.sh
redhat/: prefixdevname.spec
rules/: 71-prefixdevname.rules
src/: config.rs  main.rs  sema.rs  util.rs
test/: eth0.mockdev  net0.mockdev  test.sh
