[package]
name = "prefixdevname"

version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Michal Sekletar <msekleta@redhat.com>"]
repository = "https://github.com/msekletar/prefixdevname"
exclude = ["/target/*", "/.github/*"]

keywords = []
categories = []
description = "Udev helper utility that provides network interface naming using user defined prefix"
readme = "README.md"

[dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
libc = "0.2.141"
libudev = "0.3"
log = "0.4.17"
regex = "1.7.3"
rust-ini = "0.18.0"
